--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,4 +42,4 @@ jobs:
       run: terraform plan
 
     - name: Terraform apply
-      run: terraform apply -auto-approve -input=false -destroy
+      run: terraform apply -auto-approve
